# BVLab

./: .gitignore
Arbeitsblatt1/: Arbeitsblatt1.pro  CMakeLists.txt  ImageClassTester.cpp  MyImage.cpp  MyImage.h
Arbeitsblatt2/: CMakeLists.txt  ImageClassTester.cpp  MyHisto.cpp  MyHisto.h  MyImage.cpp  MyImage.h
Arbeitsblatt4/: Arbeitsblatt4.pro  CMakeLists.txt  MyCharImage.cpp  MyCharImage.h  MyFilter.cpp  MyFilter.h  MyFloatImage.h  MyHisto.h  MyTypeImage.cpp  MyTypeImage.h  TypeImageClassTester.cpp
Arbeitsblatt5/: CMakeLists.txt  MyCharImage.cpp  MyFloatImage.cpp  MyHisto.cpp  MyImage.cpp  MyIntImage.cpp  MyIntImage.h  MyPrimitive.h  MyTypeImage.cpp  MyTypeImage.h  TypeImageClassTester.cpp
BVProject/: CMakeLists.txt  main.cpp
